# AiZO_Projekt1

./: CMakeLists.txt
include/algorithms/: BubbleSort.hpp  BucketSort.hpp  QuickSort.hpp  ShellSort.hpp
include/structures/: BinaryTree.hpp  CustomArray.hpp  DoublyLinkedList.hpp  Queue.hpp  SinglyLinkedList.hpp
include/utils/: FileIO.hpp
src/: main.cpp
